objects/ASI_CRM_Customer_Sub_Brand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer_Competitor_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only can select VN Off-Trade Outlet Customer record</errorMessage>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Off-Trade Outlet, VN Inactive Off-Trade Outlet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Competitor Sub Brands</relationshipLabel>
        <relationshipName>Customer_Competitor_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Key_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only can select VN Off-Trade Outlet Customer record</errorMessage>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Off-Trade Outlet, VN Inactive Off-Trade Outlet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Customer Key Brands</relationshipLabel>
        <relationshipName>PRA_Customer_Key_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Facing_Target__c</fullName>
        <label>Facing Target</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR (3 AND 4))</booleanFilter>
            <errorMessage>Only can select VN Sub-brand record</errorMessage>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Sub-Brand</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>PRA Key Brand</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor Key Brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_CRM_SG_Competitor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Customer Sub Brands</relationshipLabel>
        <relationshipName>Customer_Sub_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Sub Brand</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Customer Sub Brand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sub Brands</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_Competitor_Key_Brand</fullName>
        <active>true</active>
        <label>Competitor Key Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_PRA_Key_Brand</fullName>
        <active>true</active>
        <label>PRA Key Brand</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>